# test_cpp

./: .clang-format  .gitignore  CMakeLists.txt  auto_clear_tmp_file.sh  main  main.cpp  main_test.cpp  readme.md  zcomparea.txt  zcompareb.txt
basic/: CMakeLists.txt  CanUseComplex.cpp  CanUseComplex.h  Complex.cpp  Complex.h  Exception.cpp  Exception.h
leetcode/: ex99main.cpp  numSubmatrixSumTarget
old_test_cpp/: CMakeLists.txt  main.cpp
oop/: Base.cpp  Base.h  CMakeLists.txt  SubClass.cpp  SubClass.h
primer/: Sales_data.cpp  Sales_data.h  Sales_item.h  auto_print_complie_log.sh  ex10.cpp  ex10main.cpp  ex11.cpp  ex11main.cpp  ex12.cpp  ex12.h  ex12main.cpp  ex14main.cpp  ex15.h  ex15main.cpp  ex16main.cpp  ex17.h  ex17main.cpp  ex19.h  ex2main.cpp  ex3.cpp  ex3main.cpp  ex4main.cpp  ex5.cpp  ex5main.cpp  ex6.cpp  ex6main.cpp  ex7.cpp  ex7main.cpp  ex8.cpp  ex8main.cpp  ex9.cpp  ex99.cpp  ex99main.cpp  ex99mainInput.txt  ex9main.cpp  ex_lib_test.cpp  ex_lib_test_main.cpp  ex_main_shared  ex_main_static  ex_vector.cpp  (+7 more)
primer/data/: store2  test_file.txt
primer/ex10/: test_file.txt
primer/gdb/: gdb_core.cpp  gdb_main.cpp
primer/test/: Sales_data.cpp  Sales_data.h  ex2main.cpp
stl/: CMakeLists.txt  stl_test.cpp  stl_test.h
template/: CMakeLists.txt  TemplateDemo.cpp  TemplateDemo.h
test_book/: readme.md  test_bash_input.sh  test_bash_multi_process.sh  test_stl_source_code  test_stl_source_code.cpp
test_book/data/: input
test_cmake/cmake01_hello/: CMakeLists.txt  main.cpp
test_cmake/cmake02_src/: CMakeLists.txt
test_cmake/cmake02_src/src/: CMakeLists.txt  main.cpp
test_cmake/cmake03_install/: CMakeLists.txt  COPYRIGHT  README  run_hello.sh
test_cmake/cmake03_install/doc/: hello.txt
test_cmake/cmake03_install/src/: CMakeLists.txt  main.cpp
test_cmake/cmake04_lib/: CMakeLists.txt
test_cmake/cmake04_lib/lib/: CMakeLists.txt  hello.cpp
test_cmake/cmake05_uselib/: CMakeLists.txt
test_cmake/cmake05_uselib/src/: CMakeLists.txt  main.cpp
test_concurrent/: functionDemo.h
test_concurrent/test_leetcode/: numSubmatrixSumTarget.cpp
test_cpp_problem/: SConstruct.py  hello.h  hello_hu.cpp  hello_sun.cpp  test_ctor_h_define_main.cpp
test_cue/: ex2_defineVar.cue  ex3_template.cue  ex4_moreExpression.cue  readme
test_docker/ubuntu2004/: Dockerfile  readme.md
test_grpc/: client.py  greeter.proto  server.py
test_gtest/: CMakeLists.txt  readme.md
test_gtest/src/: CMakeLists.txt  add.h
test_gtest/test/: CMakeLists.txt  test_all.cpp  test_func.cpp
test_gtest/test/haha/: test.cpp
test_more_effective_cpp/: SConstruct.py  ex26.cpp  ex26.h  ex26main.cpp  exSingleObjDemo.cpp  run_scons.sh
test_other/: test_bash.sh  test_bash_input.sh
test_primer/: Sales_data.cpp  Sales_data.h  auto_print_complie_log.sh  ex10main.cpp  ex12.h  ex13.h  ex13main.cpp  ex14.h  ex15.h  ex15main.cpp  ex16.h  ex17main.cpp  ex18.h  ex18main.cpp  ex19.cpp  ex19main.cpp  ex20.cpp  ex20.h  ex20main.cpp  ex2main.cpp  ex4main.cpp  ex5main.cpp  ex6.h  ex7.h  ex99appendix.cpp  ex9main.cpp  ex_lib.cpp  ex_lib.h  ex_lib_main.cpp  ex_lib_shared  main
test_primer/data/: test_book.txt  test_book_out.txt  test_person.txt  word_transformation_bad.txt
test_primer/gdb/: gdb_error.cpp
test_python_tmp/: compact_pic_50.py
test_scons/: SConstruct.py  ex7_hello.cpp  ex7_hello.h  ex7_main.cpp  ex_lib.cpp  ex_lib.h  ex_lib_main.cpp  run_scons.sh  target_main
test_scons/include/: lib_test.dylib
tmp/: CMakeLists.txt  json_demo.cpp  main.cpp  mock_demo.cpp
unittest/: CMakeLists.txt  FooInterface.h  MockDeme.cpp
util/: CMakeLists.txt  main.cpp  tool.cpp  tool.h
